# GuaDNS---Cloud-Flare-

./: .gitignore  README.md  index.html  install.ps1  package-lock.json  package.json  vite.config.ts  一键打包.bat  快速构建.bat  设置图标并构建.bat
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/router/: index.ts
src/stores/: auth.ts  cloudflare.ts
src/views/: Dashboard.vue  DomainDetail.vue  DomainList.vue  LockScreen.vue  MainScreen.vue  Services.vue  SetupScreen.vue
